2012-10-30
* parallellise more in database creation script

2012-10-17
* parallellise more in database creation script

2012-10-14
* fix multiprocessing code in database creation
* add script to mass rename packages in the database

2012-10-13
* make better use of multiprocessing in database creation

2012-10-12
* split creation of images into a generic part and a part for ranking
* add simple script to verify integrity of database

2012-10-03
* clear old results when opening new results file

2012-09-24
* add extra sanity check to prevent ext2 unpacking from barfing after
identifying non-ext2 images as ext2

2012-06-27
* fixes to allow batgui to run on Linux systems that don't have BAT installed

2012-06-25
* add missing dependencies to RPM file

2012-05-31
* add warning if htmldir is not set

2012-05-24
* fix ranking method for corrupted ELF files. It is not as accurate as the
usual methods we use for ELF, but better than nothing...

2012-05-23
* fix in GUI for fifo files

2012-05-22
* add 'debug' statement for helping debugging
* make location of HTML files for viewer more configurable. This needs more
work.
* htmldir can now be set on the fly by loading a new configuration
* tag and release 8.0

2012-05-21
* extra sanity checks for BAT_REPORTDIR
* add wrapper code for scanning Minix v1 file systems
* add configuration for scanning Minix v1 file systems
* pass blacklists to forges and licenses checks

2012-05-20
* add first version of minix unpacker to bat-extratools

2012-05-15
* files can have multiple symbols in the file tree, so make it easier to add
more symbols and decorate the file tree
* sort file tree
* decorate Android files in file tree
* big file fixes (finally!) for cramfs and cab unpacking

2012-05-14
* split data dump method, so it can be reused in the GUI more easily
* save data from scan in GUI
* rename "ranking" dir to "filereports", since it is far more accurate
* keep focus on selected file after applying filters